# aws-transit-data

./: .gitbook.yaml  .gitignore  .sqlfluff  README.md  SUMMARY.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: labeler.yaml
.github/workflows/: auto-label.yaml  commit-lint.yaml  inherit-labels.yaml
data/: yellow_tripdata_2019-09.parquet
docs/: README.md  SUMMARY.md  intro.md
docs/0_devops/: commit_lint.md
docs/1_infrastructure/: README.md  aws.md  ec2.md
docs/1_infrastructure/ec2/: ec2.md
docs/1_infrastructure/local/: docker_basics.md  docker_setup.md
docs/3_warehouse/: dlt.md
docs/4_analytics/: metabase.md
docs/nested/: nested-test.md
docs/page1/: README.md  page1-1.md  page1-2.md
docs/page2/: README.md  page2-1.md  page2-2.md
infra/local/: Dockerfile  docker-compose.yaml
infra/local/init-db/: init.sh
src/: docker_print.py  docker_process.py  docker_test.py
src/app/repositories/sql/: _example.sql
src/app/transform/: README.md  dbt_project.yml  profiles.yml
src/app/transform/macros/: generate_schema_name.sql
src/app/transform/models/example/: _example__docs.md
src/app/transform/models/marts/: _marts__docs.md  _marts__models.yml  taxi.sql  taxi_trips.sql
src/app/transform/models/staging/nyc_tlc/: _nyc_tlc__models.yml  _nyc_tlc__sources.yml  stg_nyc_tlc__green_taxi.sql  stg_nyc_tlc__green_taxi_trips.sql  stg_nyc_tlc__yellow_taxi.sql
