[project]
name = "aws-transit-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "appdirs>=1.4.4",
    "attrs>=25.3.0",
    "beautifulsoup4>=4.13.5",
    "blinker>=1.9.0",
    "brotli>=1.1.0",
    "bs4>=0.0.2",
    "certifi>=2025.8.3",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.3",
    "cryptography>=45.0.7",
    "cssselect>=1.3.0",
    "dbt-core>=1.10.13",
    "dbt-postgres>=1.9.1",
    "fake-useragent>=2.2.0",
    "h11>=0.16.0",
    "h2>=4.3.0",
    "hpack>=4.1.0",
    "hyperframe>=6.1.0",
    "idna>=3.10",
    "importlib-metadata>=8.7.0",
    "jsonnet>=0.21.0",
    "jsons>=1.6.3",
    "kaitaistruct>=0.10",
    "lxml>=6.0.1",
    "lxml-html-clean>=0.4.2",
    "outcome>=1.3.0.post0",
    "pandas>=2.3.3",
    "parse>=1.20.2",
    "psycopg2-binary>=2.9.11",
    "py4j>=0.10.9.9",
    "pyasn1>=0.6.1",
    "pycparser>=2.22",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pyee>=11.1.1",
    "pyopenssl>=25.1.0",
    "pyparsing>=3.2.3",
    "pyppeteer>=2.0.0",
    "pyquery>=2.0.1",
    "pysocks>=1.7.1",
    "pyspark>=4.0.0",
    "requests>=2.32.5",
    "requests-html>=0.10.0",
    "selenium>=4.32.0",
    "selenium-wire>=5.1.0",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "soupsieve>=2.8",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
    "trio>=0.30.0",
    "trio-websocket>=0.12.2",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.1",
    "typish>=1.9.3",
    "urllib3>=1.26.20",
    "w3lib>=2.3.1",
    "websocket-client>=1.8.0",
    "websockets>=10.4",
    "wsproto>=1.2.0",
    "zipp>=3.23.0",
    "zstandard>=0.24.0",
]
